--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,11 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+.staggeredGrid {
+  display: flex;
+  flex-flow: row;
+  flex-wrap: wrap;
+  
+  
+}
