--- a/src/index.css
+++ b/src/index.css
@@ -87,3 +87,20 @@ button:focus-visible {
   
   
 }
+
+.splide__slide{
+  filter: grayscale(1)  brightness(1);
+}
+
+.splide__slide > img{
+  width: 100%;
+  height: 100%;
+  aspect-ratio: auto;
+  object-fit: cover ;
+  
+  
+}
+
+.splide__slide.is-active{
+  filter: grayscale(0)  brightness(1);
+}
